# pacman-base-pygame

./: .gitignore  README.md  app.py  pyproject.toml  readme.md
pacman/: clock.py  game.py  utils.py
pacman/core/: astar.py  enemy.py  map.py  mover.py  pac.py
pacman/draw/: astar.py  drawer.py  enemy.py  map.py  pac.py  score.py
res/: map.json  map.py
