[tool.poetry]
name = "pacman_v2"
version = "0.1.0"
description = ""
authors = ["bridgeL <47290820+bridgeL@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pygame = "^2.1.2"
pyinstaller = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
